# braintrust-workbench

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  README.md
.agent/: AGENTS.md
projects/lambda-multi-turn-conversation/: .env.example  .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  client.py  deploy.sh  pyproject.toml
projects/lambda-multi-turn-conversation/docs/: README.md  changelog.md  implementation.md  issues.md  planning.md
projects/lambda-multi-turn-conversation/lambda/: package-lock.json  package.json
projects/lambda-multi-turn-conversation/lambda/src/: conversation.ts  index.ts  types.ts
projects/lambda-multi-turn-conversation/terraform/: dynamodb.tf  lambda.tf  load-env.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
projects/multi-agent-turn-google-adk/: .env.example  .mise.toml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
projects/multi-agent-turn-google-adk/data/: eval_scenarios.json
projects/multi-agent-turn-google-adk/docs/: README.md  changelog.md  implementation.md  issues.md  planning.md
projects/multi-agent-turn-google-adk/src/: __init__.py  automations.py  cli.py  eval.py  main.py  orchestrator.py  prompts.py  push_functions.py  scorers.py  setup_managed.py  tracing.py
projects/multi-agent-turn-google-adk/src/agents/: __init__.py  billing_agent.py  config.py  faq_agent.py  order_agent.py  router.py
projects/multi-agent-turn-google-adk/src/tools/: __init__.py  mock_tools.py
projects/multi-agent-turn-google-adk/tests/: __init__.py  test_main.py  test_scorers.py  test_tools.py
projects/support-desk-investigator/: .env.example  .gitignore  .mise.toml  CLAUDE.md  Dockerfile.agent  Dockerfile.backend  README.md  docker-compose.yml  package-lock.json  pyproject.toml
projects/support-desk-investigator/docs/: architecture.md  changelog.md  implementation.md  issues.md  lovable.md  planning.md  quickstart.md
projects/support-desk-investigator/scripts/: backend-entrypoint.sh  ingest-qdrant.py  init.sh  init_frappe_users.py  logs.sh  seed-db.sql  start.sh  stop.sh
projects/support-desk-investigator/src/: __init__.py  eval.py  main.py
projects/support-desk-investigator/tests/: test_main.py
(+113 files in other folders)
