[project]
name = "braintrust-conversation-client"
version = "1.0.0"
description = "Python client for testing Braintrust multi-turn Lambda tracing"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
]

# No build system needed - this is a script, not an installable package
# uv will manage dependencies and run the script directly
